--- a/app/src/main/res/layout/activity_new_journal.xml
+++ b/app/src/main/res/layout/activity_new_journal.xml
@@ -8,12 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
+        android:clickable="true"
+        android:focusable="true"
         android:orientation="vertical"
         android:padding="20dp"
         tools:context=".NewJournalActivity">
 
         <LinearLayout
-            android:id="@+id/date_picker"
+            android:id="@+id/addEntry_date_picker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/form_item_bg"
@@ -33,7 +35,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/selected_date"
+                android:id="@+id/addEntry_selected_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -44,6 +46,7 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/addEntry_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -58,6 +61,7 @@
             android:textColor="@android:color/black" />
 
         <RadioGroup
+            android:id="@+id/addEntry_emoji"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -98,6 +102,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addEntry_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
