--- a/app/src/main/res/layout/activity_new_journal.xml
+++ b/app/src/main/res/layout/activity_new_journal.xml
@@ -12,7 +12,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="20dp"
-        tools:context=".NewJournalActivity">
+        tools:context=".Activities.NewJournalActivity">
 
         <LinearLayout
             android:id="@+id/addEntry_date_picker"
