> Added menu to ViewJournalActivity > Added Delete menu action for ViewJournalActivity > Fixed a Bug in EntryListAdapter

--- a/app/src/main/res/layout/activity_view_journal.xml
+++ b/app/src/main/res/layout/activity_view_journal.xml
@@ -32,6 +32,7 @@
 
         <TextView
             android:id="@+id/viewJournal_modified"
+            android:textStyle="italic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
