--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,9 @@
     <style name="emoji_radio_btn">
         <item name="android:background">@drawable/emoji_radio_bg</item>
         <item name="android:button">@null</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:color">@android:color/black</item>
         <item name="android:layout_marginEnd">10dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
